@@ -1,0 +1,21 @@
+<?php
+
+/**
+ * @file
+ * Hooks provided by the Bundle Inherit module.
+ */
+
+/**
+ *
+ * @param $entity_type
+ *   Entity type.
+ * @param $bundle
+ *   The name of the bundle to inherit.
+ * @param $bundle_parent
+ *   The name of the parent bundle to inherit from.
+ * @param $strict
+ *   Whether performed inheritance is strict or not.
+ */
+function hook_bundle_inherit_perform($entity_type, $bundle, $bundle_parent, $strict = TRUE) {
+  // TODO: Provide some example.
+}
